--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -103,6 +103,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
+allow 2001:b011:4006:9e54::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
@@ -112,7 +113,6 @@ allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
 allow 2407:cdc0:c004::d44:d46f;
@@ -395,6 +395,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -621,7 +622,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
