--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -180,7 +180,6 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -305,6 +304,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -511,7 +511,6 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
-allow 185.230.163.104;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.241.208.115;
@@ -561,6 +560,7 @@ allow 185.82.219.109;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
+allow 188.253.7.106;
 allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
@@ -626,7 +626,6 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.142.146.139;
 allow 193.142.147.233;
 allow 193.142.147.69;
 allow 193.182.96.246;
@@ -654,7 +653,6 @@ allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.36.132.21;
-allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -967,6 +965,7 @@ allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
 allow 2407:cdc0:c004::d44:d46f;
@@ -1456,7 +1455,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1486,7 +1484,6 @@ allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
-allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1580,7 +1577,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1738,7 +1734,6 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 79.124.8.241;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
