--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -113,6 +113,7 @@ deny 2400:d320:2202:5765::1;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
+deny 2406:8dc0:6005::97f2:9c02;
 deny 2407:3640:2207:8882::1;
 deny 2407:6ac0:8:1:0:1:1965:6c63;
 deny 2407:cdc0:c004::d44:d46f;
@@ -594,7 +595,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -624,7 +624,6 @@ deny 2a0f:9400:7e11:2859::1;
 deny 2a0f:9400:7e11:73bc::1;
 deny 2a0f:9400:7e11:b60::1;
 deny 2a0f:9400:7e11:ce4d::1;
-deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
