--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -11,6 +11,7 @@ allow 103.229.54.107;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
+allow 104.131.183.19;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -156,6 +157,7 @@ allow 154.16.116.61;
 allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
+allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -380,7 +382,6 @@ allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
 allow 185.220.101.15;
-allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.154;
 allow 185.220.101.155;
@@ -684,6 +685,7 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
+allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.51.52;
@@ -1000,6 +1002,7 @@ allow 2604:6600:0:42::2;
 allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1252,6 +1255,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1278,7 +1282,6 @@ allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
-allow 2a0a:c801:1:5::57;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1315,7 +1318,6 @@ allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::147;
 allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
-allow 2a0b:f4c2:1::150;
 allow 2a0b:f4c2:1::151;
 allow 2a0b:f4c2:1::154;
 allow 2a0b:f4c2:1::155;
@@ -1499,6 +1501,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
@@ -1571,6 +1574,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1658,7 +1663,6 @@ allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.38.225.46;
-allow 5.181.156.44;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
@@ -1670,6 +1674,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1796,6 +1801,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.188;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
