--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -146,6 +146,7 @@ deny 2604:6600:0:42::2;
 deny 2604:a880:400:d0::28:6001;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
+deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:12b:1877:e308:72b3:41b0;
 deny 2605:6400:10:1362::2;
@@ -397,6 +398,7 @@ deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -423,7 +425,6 @@ deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
-deny 2a0a:c801:1:5::57;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -460,7 +461,6 @@ deny 2a0b:f4c2:1::145;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::148;
 deny 2a0b:f4c2:1::149;
-deny 2a0b:f4c2:1::150;
 deny 2a0b:f4c2:1::151;
 deny 2a0b:f4c2:1::154;
 deny 2a0b:f4c2:1::155;
@@ -644,6 +644,7 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
+deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
 deny 2a12:a800:1:1:194:26:192:161;
